...
        android:text="@string/MainSearchButtonSearch"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalTop" />

    <EditText
        android:id="@+id/MainFragmentKeywordSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:hint="@string/MainSearchEditText"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVerticalMiddle"
...
