...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">


    <Spinner
        android:id="@+id/ContextSearchSpinnerSections"
        android:layout_width="170dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineSpinner"
        tools:ignore="SpeakableTextPresentCheck" />

...
